<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/layout_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDestination"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textFilter|textPostalAddress"
            android:hint="@string/quick_plan"/>

        <ImageButton
            android:id="@+id/btnSearch"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_search"
            android:layout_gravity="center"
            android:background="@drawable/white_button"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_search_bar">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small"
                android:layout_marginRight="@dimen/padding_small"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnPlanTrip"
                    android:onClick="onClick"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:background="@drawable/white_button"
                    android:gravity="center"
                    android:text="@string/plan_trip">
                </Button>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/shadow" />

                <Button
                    android:id="@+id/btnTripHistory"
                    android:onClick="onClick"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:background="@drawable/white_button"
                    android:text="@string/trip_history">
                </Button>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/shadow" />

                <Button
                    android:id="@+id/btnDelays"
                    android:onClick="onClick"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:background="@drawable/white_button"
                    android:gravity="center"
                    android:text="@string/delays_warnings">
                </Button>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/shadow" />

                <FrameLayout
                    android:id="@+id/btnMetroMap"
                    android:onClick="onClick"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    >


                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/metro_map_croppedsmaller"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_weight="0.5"
                            android:background="#00770077"
                            android:gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20dp"/>

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_weight="0.5"
                            android:background="#AA000000"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/metro_map"/>
                        </LinearLayout>
                </FrameLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/shadow" />
            </LinearLayout>

        </ScrollView>
</RelativeLayout>